--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,16 @@ footer.page-footer {
 .text-brown{
   color: #5B1E00 !important;
 }
+#loading {
+  display: block;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background-color: #f1f2f3;
+  background-image: url("../images/loader/loader-perainda-2.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+}
